--- a/programming/readme.adoc
+++ b/programming/readme.adoc
@@ -1,1 +1,105 @@
-programming_languages.adoc
+= Programming Languages
+:keywords: programming, languages, paradigms
+:toc:
+:hide-uri-scheme:
+:stylesheet: ../style.css
+:linkcss:
+
+.TODO
+[%collapsible]
+====
+* https://dl.acm.org/doi/10.1145/359576.359579[1978, John Backus, Can programming be liberated from the von Neumann style?: a functional style and its algebra of programs]
+* https://dl.acm.org/doi/10.1145/358896.358899[1980, Kenneth E. Iverson, Notation as a tool of thought]
+* https://youtube.com/playlist?list=PLVFrD1dmDdvdvWFK8brOVNL7bKHpE-9w0[Structure and Interpretation of Computer Programs - YouTube playlist by @code_report]
+* https://youtube.com/playlist?list=PLVFrD1dmDdvcjCQDPhExqP56jqxp0Ssn_[Category Theory for Programmers - YouTube playlist by @code_report]
+* https://youtube.com/playlist?list=PLVFrD1dmDdvdv7trr5j9ir7qrFK5K80X0[Seven Languages in Seven Weeks - YouTube playlist by @code_report]
+* First-class citizen
+====
+
+== Start Programming
+
+If you are new to programming I would recommend you to start with Python or TypeScript.
+They are both multi-paradigm high-level languages.
+Which means you can do basically anything with them relatively easily.
+Also they are 2nd and 4th in https://octoverse.github.com/2022/top-programming-languages[GitHub's Top languages used in 2022] ranking.
+And 6th, 4th in the https://survey.stackoverflow.co/2022/#most-loved-dreaded-and-wanted-language-love-dread[Stack Overflow's most loved language] ranking.
+
+== https://en.wikipedia.org/wiki/List_of_programming_languages_by_type[Types of Programming Languages]
+
+So far I have found these categories to be the most useful.
+
+Main use::
+* General-purpose
+* Interactive mode languages
+* Command-line interface languages
+* System languages
+* Machine languages
+* Extension languages
+* Numerical analysis
+* Concurrent languages
+
+Execution::
+* Compiled languages
+* Interpreted languages
+
+Syntax::
+* Curly-bracket languages
+* Off-side rule languages
+
+https://en.wikipedia.org/wiki/Programming_paradigm[Paradigm]::
+* Multiparadigm languages
+* Imperative languages
+** Procedural languages
+** Object-oriented class-based languages
+* Declarative languages
+** Functional languages
+*** Purely-functional
+** Logic-based languages
+* Array languages
+* Metaprogramming languages
+
+Memory::
+* Languages with manual memory management
+* Garbage collected languages
+* Type safe languages
+
+https://en.wikipedia.org/wiki/Type_system[Type Systems]::
+* Strong or Weak
+* Static or Dynamic
+
+https://en.wikipedia.org/wiki/Evaluation_strategy[Evaluation strategy]::
+* Eager evaluation
+* Lazy evaluation
+* Short-circuit evaluation
+
+== Languages Worth Mentioning
+
+Assembly language::
+First abstraction above machine code.
+
+C Language::
+One of the most successful languages of all time.
+I believe, most of the programming languages are written in the C language.
+Its at that time popularity can be grasped from the song https://youtu.be/1S1fISh-pag[Write in C].
+
+https://www.rust-lang.org/[Rust]::
+The most loved programming language, plus another language that made it to the Linux kernel source code.
+Memory safety done by borrow checker, is the most loved language, made it to the kernel.
+
+Zsh::
+Z Shell is a great option for interactive login shell, extends the Bourne Shell.
+
+JavaScript::
+The programming language of the web.
+
+https://www.haskell.org/[Haskell]::
+Lazily evaluated purely-functional language with type classes.
+
+https://www.python.org/[Python]::
+Second most used programming language with very pleasant syntax.
+
+https://julialang.org/[Julia]::
+Great (array) language for mathematics that runs fast (jit).
+
+https://mlochbaum.github.io/BQN/[BQN]::
+Iversonian language, by Marshall Lochbaum who started in J and implemented a lot of Dyalog APL himself.
