--- a/tools/readme.adoc
+++ b/tools/readme.adoc
@@ -3,8 +3,24 @@
 :experimental:
 :hide-uri-scheme:
 :toc:
+:stylesheet: ./../style.css
+:linkcss:
 
 The art of using a computer like a human being
+
+== Index
+
+* link:cascading-style-sheets[]
+* link:docker[]
+* link:docsify[]
+* link:git[]
+* link:github[]
+* link:hugo[]
+* link:jupyter-notebook[]
+* link:make[]
+* link:neovim[]
+* link:regular-expressions[]
+* link:vim[]
 
 == Overview
 
