--- a/readme.adoc
+++ b/readme.adoc
@@ -1,4 +1,10 @@
 = Jaroslav Langer
 :stylesheet: style.css
+:linkcss:
 
 Welcome! My name is Jaroslav Langer. Here I share the things I do.
+
+* link:programming[]
+* link:data[]
+* link:tools[]
+* link:various[]
