--- a/informatics/readme.adoc
+++ b/informatics/readme.adoc
@@ -1,1 +1,28 @@
-computer_science.adoc
+= Computer Science
+:keywords: computer-science, informatics
+:linkcss:
+:stylesheet: ../style.css
+:hide-uri-scheme:
+
+.TODO
+[%collapsible]
+====
+. https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-0002-introduction-to-computational-thinking-and-data-science-fall-2016/lecture-videos/index.htm[Introduction to Computational Thinking and Data Science (mit.edu)]
+. https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-034-artificial-intelligence-fall-2010/lecture-videos/[Artificial Intelligence (mit.edu)]
+====
+
+== https://en.wikipedia.org/wiki/Computer_architecture
+
+* https://en.wikipedia.org/wiki/Word_(computer_architecture)
+
+https://en.wikipedia.org/wiki/Instruction_set_architecture
+
+x86::
+"x86 (also known as 80x86[2] or the 8086 family[3]) is a family of complex instruction set computer (CISC) instruction set architectures[a] initially developed by Intel"
+-- https://en.wikipedia.org/wiki/X86
+
+arm::
+"ARM (stylised in lowercase as arm, formerly an acronym for Advanced RISC Machines and originally Acorn RISC Machine) is a family of reduced instruction set computer (RISC) instruction set architectures for computer processors"
+-- https://en.wikipedia.org/wiki/ARM_architecture_family
+
+== https://amturing.acm.org/byyear.cfm[Chronological listing of A.M. Turing Award winners]
