--- a/programming/haskell/readme.adoc
+++ b/programming/haskell/readme.adoc
@@ -46,6 +46,7 @@ An advanced, purely functional programming language
 . https://wiki.haskell.org/Import
 . https://wiki.haskell.org/Pointfree
 . http://wiki.haskell.org/Comparison_chain
+. https://hoogle.haskell.org/
 . https://hackage.haskell.org/package/probability-0.2.8/docs/Numeric-Probability-Distribution.html
 . https://dennybritz.com/posts/probability-monads-from-scratch/
 . https://hackage.haskell.org/package/base-4.18.0.0/docs/Data-Maybe.html
@@ -368,3 +369,68 @@ https://hackage.haskell.org/package/base[base: Basic libraries]::
 This package contains the Standard Haskell Prelude and its support libraries, and a large collection of useful libraries ranging from data structures to parsing combinators and debugging utilities.
 https://hackage.haskell.org/package/containers[containers: Assorted concrete container types]::
 This package contains efficient general-purpose implementations of various immutable container types including sets, maps, sequences, trees, and graphs.
+https://hackage.haskell.org/package/safe[safe: Library of safe (exception free) functions]::
+A library wrapping Prelude/Data.List functions that can throw exceptions, such as head and !!. Each unsafe function has up to four variants
+https://hackage.haskell.org/package/lens[lens: Lenses, Folds and Traversals]::
+The combinators in Control.Lens provide a highly generic toolbox for composing families of getters, folds, isomorphisms, traversals, setters and lenses and their indexed variants.
+https://hackage.haskell.org/package/repa[repa: High performance, regular, shape polymorphic parallel arrays.]::
+Repa provides high performance, regular, multi-dimensional, shape polymorphic parallel arrays.
+
+== Category Theory
+
+=== https://hackage.haskell.org/package/base-4.18.0.0/docs/Data-Semigroup.html[Semigroup]
+
+.Minimal complete definition: `+(<>) | sconcat+`
+----
+class Semigroup a where
+        (<>) :: a -> a -> a
+----
+
+=== https://hackage.haskell.org/package/base-4.18.0.0/docs/Data-Monoid.html[Monoid]
+
+.Minimal complete definition: `+mempty | mconcat+`
+----
+class Semigroup a => Monoid a where
+        mempty :: a
+----
+
+=== https://hackage.haskell.org/package/base-4.18.0.0/docs/Data-Foldable.html[Foldable]
+
+.Minimal complete definition `+foldMap | foldr+`
+----
+class Foldable t where
+        foldMap :: Monoid m => (a -> m) -> t a -> m
+----
+
+=== https://hackage.haskell.org/package/base-4.18.0.0/docs/Data-Functor.html[Functor]
+
+.Minimal complete definition: `+fmap+`
+----
+class Functor f where
+        fmap :: (a -> b) -> f a -> f b
+----
+
+=== https://hackage.haskell.org/package/base-4.18.0.0/docs/Data-Traversable.html[Traversable]
+
+.Minimal complete definition `+traverse | sequenceA+`
+----
+class (Functor t, Foldable t) => Traversable t where
+        traverse :: Applicative f => (a -> f b) -> t a -> f (t b)
+----
+
+=== https://hackage.haskell.org/package/base-4.18.0.0/docs/Control-Applicative.html[Applicative]
+
+.A minimal complete definition must include implementations of pure and of either <*> or liftA2
+----
+class Functor f => Applicative f where
+        pure :: a -> f a
+        (<*>) :: f (a -> b) -> f a -> f b
+----
+
+=== https://hackage.haskell.org/package/base-4.18.0.0/docs/Control-Monad.html[Monad]
+
+.Minimal complete definition `+(>>=)+`
+----
+class Applicative m => Monad m where
+        (>>=) :: forall a b. m a -> (a -> m b) -> m b
+----
