index.html was generated for j-language readme using asciidoctor.

--- a/programming/j-language/readme.adoc
+++ b/programming/j-language/readme.adoc
@@ -4,12 +4,8 @@
 :source-highlighter: highlight.js
 :hide-uri-scheme:
 :toc:
-
-.TODO
-[%collapsible]
-====
-====
-
+:stylesheet: ../../style.css
+:linkcss:
 
 == Installation
 
